# template-pitch-deck

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  ISA.md  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/template-pitch-deck/: SKILL.md
data/: AGENTS.md  README.md  claim_ledger.yaml
manuscript/: 00_abstract.md  01_introduction.md  02_deck_architecture.md  03_content_and_validation.md  04_reproducibility.md  99_references.md  AGENTS.md  README.md  config.yaml  config.yaml.example  deck_content_long.yaml  deck_content_medium.yaml  deck_content_short.yaml  layer_contract.yaml  preamble.md  references.bib
output/.checkpoints/: pipeline_checkpoint.json
output/.pipeline/artifacts/: stage-04-project-tests.json  stage-05-project-analysis.json  stage-06-pdf-rendering.json  stage-07-output-validation.json  (+1 more)
output/data/: publication_ledger.json
output/figures/: integrity_stack.mmd  pipeline_stages.mmd  two_layer_architecture.mmd
output/pdf/: _combined_manuscript.aux  _combined_manuscript.md  _combined_manuscript.tex  _combined_manuscript.toc
output/pptx/: template_template_pitch_long.pptx  template_template_pitch_medium.pptx  template_template_pitch_short.pptx
output/release_bundle/: manifest.json  publication_metadata.json
output/reports/: artifact_manifest.json  evidence_registry.json  lessons.jsonl  lessons.md  log_summary.txt  next_run_context.md  output_statistics.json  output_statistics.txt  pause_recommendations.json  pipeline_report.html  pipeline_report.json  pipeline_report.md  telemetry.json  telemetry.txt  test_results.json  test_results.md  validation_report.json  validation_report.md
output/web/: _combined_manuscript.md  index.html  manuscript__00_abstract.html  manuscript__01_introduction.html  manuscript__02_deck_architecture.html  manuscript__03_content_and_validation.html  manuscript__04_reproducibility.html  manuscript__99_references.html
scripts/: 10_audit_deck_content.py  15_generate_diagrams.py  16_generate_charts.py  20_render_decks.py  30_audit_diligence.py  AGENTS.md  README.md  _bootstrap.py
src/: AGENTS.md  README.md  __init__.py  chart_rendering.py  cliche_lint.py  content_loader.py  coverage_chart_data.py  deck_audit.py  deck_tokens.py  diligence_audit.py  infra_facts.py  paths.py  render_orchestration.py  standalone_slides.py  token_resolution.py
tests/: AGENTS.md  README.md  conftest.py  test_chart_rendering.py  test_cliche_lint.py  test_content_loader.py  test_coverage_chart_data.py  test_deck_audit.py  test_deck_tokens.py  test_diligence_audit.py  test_infra_facts.py  test_paths.py  test_render_orchestration.py  test_standalone_slides.py  test_token_resolution.py
(+112 files in other folders)
